* ChangeLog
Release 0.3 Start 21/05/2020
01. Debian build - use /usr/lib/<triplet> (e.g. /usr/lib/x86_64-linux-gnu)
02. configur.ac - use LIB_SSL, LIB_CRYPTO
03. debian/control - use ${shlibs:Depends}
- 16/06/2020
04. added setuserid.c, setuserid.h
05. Makefile.am: use BUILT_SOURCES to build all needed header files
- 20/06/2020
06. added AC_PROG_CC_C99 to configure.ac
07. use m4_normalize(m4_include([conf-version])) in AC_INIT
01/07/2020
08. Added textcode from libowfat, http://www.fefe.de/libowfat/ 
09. added array library from http://cr.yp.to/lib/array.html
04/07/2020
10. fmt.h: include sys/types.h if config.h is not included
11. setuserid.h: include sys/types.h, grp.h if config.h is not included
12. uint16.h: include inttypes.h if config.h is not included
13. libqmail.spec: use smp_mflags for parallel make
14. debian/libqmail.dsc: use Debtransform-Release to increment build number
07/07/2020
15. taia_now.c: renamed variable now to tmval
16. added CFLAGS="$CFLAGS -O4 -Wall -Wimplicit -fPIC -fno-strict-aliasing
    -Wunused -Wcomment -Wchar-subscripts -Wuninitialized -Wshadow
    -Wcast-align -Wwrite-strings -Wno-discarded-qualifiers"