@@ -15,3 +15,12 @@ libqmail (@version@-@release@) unstable; urgency=medium
   * libqmail.spec: use smp_mflags for parallel make
   * debian/libqmail.dsc: use Debtransform-Release to increment build number
   * taia_now.c: renamed variable now to tmval
+  * scan.h: added scan_double(), scan_hexdump() prototyps
+  * configure.ac: used comprehensive CFLAGS
+  * default.configure: create conf-release if not exists
+  * cdb.h: added cdb_free() prototype
+  * sig.h, sig.c: added sig_usr1, sig_usr2
+  * fmt.h: added tohex() proto
+  * fmt_hexbyte.c: added tohex() function
+  * libqmail.spec: added iopause.h header file
+  * Makefile.am: added tohex(), iopause.c, uint16, functions
